# tm

./: .air.toml  .gitignore  CHANGES  CMakeLists.txt  LICENSE  README.md  go.mod  package-lock.json  package.json.in  vite.config.js
backend/: CMakeLists.txt
backend/tools/csv2sql/: CMakeLists.txt  csv2sql.md
backend/tools/csv2sql/cmd/: main.go
backend/tools/csv2sql/internal/converter/: converter.go  csv_converter.go
backend/tools/csv2sql/internal/generator/: diagram.go  doc.go  generator.go  sql.go
backend/tools/csv2sql/internal/port/: file_exporter.go  file_importer.go  importer.go
backend/tools/csv2sql/internal/port/db_info/: db_info.go  table_info.go
backend/tools/csv2sql/internal/port/file/: info.go
backend/tools/csv2sql/internal/reader/: line.go  reader.go
cmake/: golang.cmake  util.cmake
tools/: CMakeLists.txt
tools/cmd/csv2sql/: csv2sql.md  main.go
tools/csv2sql/: CMakeLists.txt
tools/csv2sql/cmd/: main.go
tools/csv2sql/internal/converter/: converter.go  csv_converter.go
tools/csv2sql/internal/generator/: diagram.go  doc.go  generator.go  sql.go
tools/csv2sql/internal/port/: file_exporter.go  file_importer.go
tools/csv2sql/internal/port/args/: option.go
tools/csv2sql/sample/: table.csv  table.fods
tools/internal/converter/: converter.go  csv_converter.go
tools/internal/generator/: diagram.go  doc.go  generator.go  sql.go
tools/internal/port/: file_exporter.go  file_importer.go
tools/internal/port/db_info/: column_info.go
web/src/: alpine-importer.js  app-base.css  htmx-importer.js
web/templates/trial1/: home.templ  index.templ
